--- a/pycharm/defaults.yaml
+++ b/pycharm/defaults.yaml
@@ -3,18 +3,18 @@
 pycharm:
   prefix: /usr/lib/jetbrains
   tmpdir: /tmp/jetbrainstmp
-  symlink: /usr/bin/pycharm
-  symhome: /opt/jetbrains/pycharm
   command: /bin/pycharm.sh
   homes: /home
   osflavour: linux
 
   jetbrains:
+    home: /opt/jetbrains
+    uri: https://data.services.jetbrains.com/products/releases?latest=true&code=
+    #See https://www.jetbrains.com/help/pycharm/meet-pycharm.html
     #Product default is PyCharm (PC), v.s. PyCharm-Edu (PCE).
     product: PC
-    #Defaults to pycharm community edition
+    #Defaults to community edition
     edition: C
-    uri: https://data.services.jetbrains.com/products/releases?latest=true&code=
 
   dl:
     archive_type: tar
@@ -24,17 +24,15 @@ pycharm:
     source_url:
     src_hashfile:
     src_hashsum:
-    archive_name:
-    unpack_opts:
 
-  alt:
-    priority: 170
-    realhome: 
-    realcmd:
+  linux:
+    altpriority: 170
+    symlink: /usr/bin/pycharm
 
   prefs:
     user: undefined_user
-    importurl:
-    importdir:
-    myfile: pycharm-prefs.xml
+    #See https://www.jetbrains.com/help/pycharm/exporting-and-importing-settings.html
+    jarurl:
+    jardir:
+    jarfile: pycharm-settings.jar
 
