Minor updates (sqlplus.developer not verified on Windows, ensure /opt/jetbrains/ gets created by init.sls); update readme

--- a/pycharm/files/pycharm.desktop
+++ b/pycharm/files/pycharm.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Jetbrains PyCharm {{ edition }} edition
+Name=Jetbrains PyCharm {{ edition }}E
 Comment=JetBrains PyCharm (Python IDE)
 Icon={{ home }}/{{ command.split('.')[0] }}.png
 Exec={{ home }}/{{ command }}
