Disable Debian Alternatives when altpriority is undefined

--- a/pycharm/defaults.yaml
+++ b/pycharm/defaults.yaml
@@ -26,11 +26,12 @@ pycharm:
     src_hashsum:
 
   linux:
-    altpriority: 170
     symlink: /usr/bin/pycharm
+    #debian alternatives is disabled by default. Activated via pillar value.
+    altpriority: 0
 
   prefs:
-    user: undefined_user
+    user:
     #See https://www.jetbrains.com/help/pycharm/exporting-and-importing-settings.html
     jarurl:
     jardir:
