--- a/pillar.example
+++ b/pillar.example
@@ -9,8 +9,9 @@ pycharm:
     retries: 1
     interval: 30
   linux:
-    #Increase priority for each version/edition installation
-    altpriority: 170
+    #Enable Debian alternatives feature by setting nonzero 'altpriority' value here.
+    #Increase same value on each subsequent software installation.
+    #altpriority: 170
   prefs:
     user: undefined_user
     #See https://www.jetbrains.com/help/pycharm/exporting-and-importing-settings.html
