--- a/pycharm/defaults.yaml
+++ b/pycharm/defaults.yaml
@@ -1,7 +1,7 @@
 #Default Look Dictionary
 
 pycharm:
-  prefix: /usr/lib/jetbrains
+  prefix: /usr/local/jetbrains
   tmpdir: /tmp/jetbrainstmp
   command: /bin/pycharm.sh
   homes: /home
