Support .desktop file in /usr/share/applications.
This makes PyCharm show up in e.g. Gnome's launcher.

--- a/pycharm/defaults.yaml
+++ b/pycharm/defaults.yaml
@@ -29,6 +29,8 @@ pycharm:
     symlink: /usr/bin/pycharm
     #debian alternatives is disabled by default. Activated via pillar value.
     altpriority: 0
+    #Place .desktop file for showing PyCharm in e.g. Gnome's launcher.
+    install_desktop_file: True
 
   prefs:
     user:
