--- a/pillar.example
+++ b/pillar.example
@@ -12,6 +12,9 @@ pycharm:
     #Enable Debian alternatives feature by setting nonzero 'altpriority' value here.
     #Increase same value on each subsequent software installation.
     altpriority: 0
+    #Place a .desktop file in /usr/share/applications (default is True)
+    #This makes PyCharm show up in e.g. Gnome's launcher.
+    install_desktop_file: True
   prefs:
     user: undefined_user
     #See https://www.jetbrains.com/help/pycharm/exporting-and-importing-settings.html
