Make desktop file path configurable.

--- a/pycharm/defaults.yaml
+++ b/pycharm/defaults.yaml
@@ -31,6 +31,7 @@ pycharm:
     altpriority: 0
     #Place .desktop file for showing PyCharm in e.g. Gnome's launcher.
     install_desktop_file: True
+    desktop_file: /usr/share/applications/pycharm.desktop
 
   prefs:
     user:
