--- a/pillar.example
+++ b/pillar.example
@@ -3,14 +3,13 @@
 ---
 pycharm:
   edition: C       # community
-  config: {}
+  flavour: linuxAnaconda
   environ:
     a: b
   pkg:
-    tag: linuxAnaconda
     use_upstream_archive: true
     use_upstream_macapp: false
   identity:
-    user: undefined_user
+    user: undefined_user  # need usernamne on linux
   linux:
     altpriority: 0
