--- a/pycharm/osfamilymap.yaml
+++ b/pycharm/osfamilymap.yaml
@@ -16,30 +16,26 @@
 {%- endif %}
 
 Windows:
-  command: '\\pycharm.exe'
+  flavour: windows
+  command: \\pycharm.exe
   dir:
-    archive: 'C:\\Program files\\Jetbrains\\'
-    tmp: 'C:\\temp\\jetbrainstmp\\'
-    homes: 'C:\\Users'
+    archive: C:\\Program files\\Jetbrains\\
+    tmp: C:\\temp\\jetbrainstmp\\
+    homes: C:\\Users
   pkg:
     suffix: zip
-    tag: windows
-    archive:
-      source_hash:
 
 MacOS:
+  flavour: mac
   identity:
     rootuser: {{ macos_rootuser | d('') }}
     rootgroup: {{ macos_rootgroup | d('') }}
     user: {{ macos_rootuser | d('') }}
-  command: '/pycharm'
+  command: /pycharm
   environ_file: /etc/defaults/pycharm.sh
   dir:
-    homes: '/Users'
+    homes: /Users
   pkg:
     use_upstream_macapp: true
     use_upstream_archive: false
     suffix : dmg
-    tag: mac
-    macapp:
-      source_hash:
