--- a/test/integration/arch/inspec.yml
+++ b/test/integration/arch/inspec.yml
@@ -1,11 +1,12 @@
 # -*- coding: utf-8 -*-
 # vim: ft=yaml
 ---
-name: default
+name: arch
 title: pycharm formula
 maintainer: SaltStack Formulas
 license: Apache-2.0
-summary: Verify that the pycharm formula is setup and configured correctly
+# yamllint disable-line rule:line-length
+summary: Verify that the pycharm formula is setup and configured correctly (on Arch Linux)
 supports:
   - platform-name: debian
   - platform-name: ubuntu
