--- a/pycharm/defaults.yaml
+++ b/pycharm/defaults.yaml
@@ -54,7 +54,9 @@ pycharm:
   linux:
     symlink: /usr/local/bin/pycharm
     altpriority: 0
+
+  shortcut:
     # On freedesktop.org-compliant desktops, enable Icon on Linux launchers.
     # Place a .desktop file in e.g. /usr/share/applications
-    install_desktop_file: true
-    desktop_file: /usr/share/applications/pycharm.desktop
+    install: true
+    file: /usr/share/applications/pycharm.desktop
